--- a/package.json
+++ b/package.json
@@ -43,5 +43,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 9.0.5.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mattisso/odasys.git"
+  },
+  "author": "Mensah Attisso",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mattisso/odasys/issues"
+  },
+  "homepage": "https://github.com/Mattisso/odasys#readme"
 }
