--- a/angular.json
+++ b/angular.json
@@ -131,7 +131,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "odasys:serve"
+            "devServerTarget": "odasys:src/serve"
           },
           "configurations": {
             "production": {
