--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "delete": "1.1.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
