--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sample": "node src/server/seed/load-seed/index.js",
     "watch:server": "nodemon src/server/server.js",
     "lints": " esw src/server --color",
-    "lint:watch": "npm run lints -- --watch",
+    "lint:watch": "npm run lints --fix --watch",
     "testbe": "tsc -p server && mocha dist/server/test --exit",
     "stop-win": "Taskkill /IM node.exe /F"
   },
@@ -40,6 +40,7 @@
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link": "1.2.14",
+    "apollo-server-express": "^2.12.0",
     "async": "3.2.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
@@ -48,6 +49,7 @@
     "delete": "1.1.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "jsonwebtoken": "8.5.1",
