--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "mongoose": "5.9.9",
     "morgan": "1.10.0",
     "multer": "1.4.2",
+    "ngx-pagination": "^5.0.0",
     "npm-check-updates": "4.1.2",
     "rxjs": "6.5.5",
     "tslib": "1.11.1",
